# MotifDiscovery

./: CMakeLists.txt  ConsensusString.cpp  ConsensusString.h  Experiment.cpp  Experiment.h  GRASP.cpp  GRASP.h  Greedy.cpp  Greedy.h  LocalSearch.cpp  LocalSearch.h  Perturbation.cpp  Perturbation.h  Problem.cpp  Problem.h  README.md  Solution.cpp  Solution.h  main.cpp
TRANSFAC_Dataset/Real/: dm06r.fasta  hm06r.fasta  hm07r.fasta  hm08r.fasta  hm09r.fasta  hm10r.fasta  hm11r.fasta  hm12r.fasta  hm13r.fasta  hm14r.fasta  hm15r.fasta  hm16r.fasta  hm17r.fasta  hm18r.fasta  hm19r.fasta  hm20r.fasta  hm21r.fasta  hm22r.fasta  hm23r.fasta  hm24r.fasta  hm26r.fasta  mus06r.fasta  mus07r.fasta  mus08r.fasta  mus09r.fasta  mus10r.fasta  mus11r.fasta  mus12r.fasta  yst06r.fasta  yst08r.fasta  yst09r.fasta
experiment/: allResults.txt
